OO-3442: password history and UI to configure the lenght of the history

--- a/src/main/java/org/olat/login/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/login/_i18n/LocalStrings_de.properties
@@ -41,6 +41,8 @@ accesskey.topnav=$org.olat.core.commons.fullWebApp\:accesskey.topnav
 admin.menu.title=Gast und Einladung
 admin.menu.title.alt=$\:admin.menu.title
 
+disable.history=ausgeschaltet
+password.history=Kennwort Geschichte
 admin.password.menu.title=Kennwortrichtlinie
 admin.password.menu.title.alt=Kennwortrichtlinie
 change.once=Passwort must einmal ge\u00E4ndert werden
