--- a/src/main/java/org/olat/login/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/login/_i18n/LocalStrings_en.properties
@@ -41,6 +41,7 @@ accesskey.topnav=$org.olat.core.commons.fullWebApp\:accesskey.topnav
 admin.menu.title=Guest and invitation
 admin.menu.title.alt=$\:admin.menu.title
 
+disable.history=Deactivate password history
 admin.password.menu.title=Password policy
 admin.password.menu.title.alt=Password policy
 change.once=Password need to be changed once
