--- a/src/main/java/org/olat/login/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/login/_i18n/LocalStrings_de.properties
@@ -42,21 +42,21 @@ admin.menu.title=Gast und Einladung
 admin.menu.title.alt=$\:admin.menu.title
 
 disable.history=ausgeschaltet
-password.history=Kennwort Geschichte
-admin.password.menu.title=Kennwortrichtlinie
-admin.password.menu.title.alt=Kennwortrichtlinie
-change.once=Passwort must einmal ge\u00E4ndert werden
-max.age=Standard Lebensdauer
-max.age.hint=In Tage
-max.age.title=Max. Lebensdauer von Kennwörter
-max.age.description=Sie können hier den maximum Lebensdauer von Kennwörter für jede Rolle definieren.
-max.age.author=Lebensdauer für Autor
-max.age.groupmanager=Lebensdauer für Gruppenverwalter
-max.age.poolmanager=Lebensdauer für  Fragenpoolverwalter
-max.age.usermanager=Lebensdauer für Benutzerverwalter
-max.age.learnresourcemanager=Lebensdauer für  Lernressourcenverwalter
-max.age.administrator=Lebensdauer für Systemadministrator
-password.policy.title=Kennwortrichtlinie
+password.after=für {0} Änderungen
+password.history=Verwendung von vorherigen Passwörtern verhindern
+admin.password.menu.title=Passwort-Richtlinien
+admin.password.menu.title.alt=Richtlinien über die Änderung von Passwörtern
+change.once=Passwort \u00E4ndern beim ersten Login
+max.age=Neues Passwort erzwingen nach
+max.age.hint=in Tagen
+max.age.description=Sie können hier festlegen wie oft ein Benutzer sein Passwort ändern muss und ob ein Passwort wiederverwendet werden kann. Die Lebensdauer des Passwortes kann pro Rolle festgelegt werden.
+max.age.author=... für Autoren
+max.age.groupmanager=... Gruppenverwalter
+max.age.poolmanager=...  Fragenpoolverwalter
+max.age.usermanager=... Benutzerverwalter
+max.age.learnresourcemanager=... Lernressourcenverwalter
+max.age.administrator=... Systemadministrator
+password.policy.title=Passwort-Richtlinien
 
 authentication.provider.description=Geh\u00F6ren Sie keiner der oben aufgelisteten Institutionen an oder haben ein lokales Nutzerkonto?
 authentication.provider.linkText=Anmelden mit OpenOLAT Konto 
