--- a/src/main/java/org/olat/login/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/login/_i18n/LocalStrings_en.properties
@@ -41,20 +41,21 @@ accesskey.topnav=$org.olat.core.commons.fullWebApp\:accesskey.topnav
 admin.menu.title=Guest and invitation
 admin.menu.title.alt=$\:admin.menu.title
 
-disable.history=Deactivate password history
+disable.history=disabled
+password.after=for {0} changes
+password.history=Prevent reuse of previous passwords
 admin.password.menu.title=Password policy
-admin.password.menu.title.alt=Password policy
-change.once=Password need to be changed once
-max.age=Default age
-max.age.hint=In days
-max.age.title=Maximum age policy for passwords
-max.age.description=You can define the maximum age for password by roles.
-max.age.author=Max. age for author
-max.age.groupmanager=Max. age for group manager
-max.age.poolmanager=Max. age for question bank manager
-max.age.usermanager=Max. age for user manager
-max.age.learnresourcemanager=Max. age for learning resource manager
-max.age.administrator=Max. age administrator
+admin.password.menu.title.alt=Policy about changing of passwords
+change.once=Change password on first login
+max.age=Enforce new password after
+max.age.hint=in days
+max.age.description=In this form you can specify how often a user has to change his password and whether or not a password can be re-used. The lifetime of the passwords can be specified for each role separately.  
+max.age.author=... for authors
+max.age.groupmanager=... for group manager
+max.age.poolmanager=... for question bank manager
+max.age.usermanager=... for user manager
+max.age.learnresourcemanager=... for learning resource manager
+max.age.administrator=... for administrator
 password.policy.title=Password policies
 
 authentication.provider.description=Don't you belong to one of the institutions mentioned above or have a local user acount?
